fix tooltip z-index

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -13,4 +13,5 @@
 .react-tooltip {
   background-color: #171717;
   border-radius: .5rem;
+  z-index: 50;
 }
